successfully logs the json object in the console at the press of a button

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joke Api Example</title>
+    <script src="js/main.js" defer></script>
 </head>
 <body>
-    
+    <button type="button" id="getRandomJoke"> Get Random Joke </button>
 </body>
 </html>
